# interp-spline

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: akima.rs  bspline.rs  cubic.rs  knots.rs  lib.rs  linear.rs
