[package]
name = "interp-spline"
version = "0.1.0"
edition = "2021"
description = "Interpolation and spline methods: linear, cubic Hermite, B-spline, Akima"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/interp-spline"
keywords = ["interpolation", "spline", "cubic", "bspline", "akima"]
categories = ["mathematics", "science"]

[dependencies]
